added batch mode and multi strat

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,13 @@ readme = "README.md"
 requires-python = ">3.10"
 dependencies = [
     "demucs>=4.0.1",
-    "dotenv>=0.9.9",
     "fastapi>=0.116.1",
     "faster-whisper>=1.2.0",
     "librosa>=0.11.0",
     "numpy>=2.2.6",
     "openai-whisper>=20250625",
     "pydantic>=2.11.7",
+    "python-dotenv>=1.1.1",
     "python-multipart>=0.0.20",
     "requests>=2.32.5",
     "soundfile>=0.13.1",
